Bug #3237
r10 is added 2 times to panic info
Start date:
2012-09-29
Due date:
% Done:
0%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Looks like a typo in http://src.illumos.org/source/xref/illumos-gate/usr/src/uts/intel/ia32/os/archdep.c#1043.
Updated by Garrett D'Amore about 8 years ago
commit ff512403afa294019aee0a9c4e4f778f1d7ed207
Author: Garrett D'Amore <garrett@dey-sys.com>
Date: Wed Jan 30 10:53:25 2013 -0800
3237 r10 is added 2 times to panic info
Reviewed by: Marcel Telka <Marcel.Telka@nexenta.com>
Reviewed by: Albert Lee <trisk@nexenta.com>
Reviewed by: Hans Rosenfeld <hans.rosenfeld@nexenta.com>
Reviewed by: Richard Lowe <richlowe@richlowe.net>
Approved by: Garrett D'Amore <garrett@damore.org>
The author is botched (my fault, I forgot to fix up when manually importing the mercurial patch).
The actual author is Yuri Pankov (yuri.pankov@nexenta.com)