3237 r10 is added 2 times to panic info Reviewed by: Marcel Telka <Marcel.Telka@nexenta.com> Reviewed by: Albert Lee <trisk@nexenta.com> Reviewed by: Hans Rosenfeld <hans.rosenfeld@nexenta.com> Reviewed by: Richard Lowe <richlowe@richlowe.net> Approved by: Garrett D'Amore <garrett@damore.org>